# hakoniwa-drone-core

./: .gitignore  my-run-drone-service.bat  run-drone-service.bat
Spidar/: sample.py
docs/tips/wsl/: ardupilot-setup.md  docker-px4.md  hakoniwa-wsl.md  px4-setup.md
drone_api/: run-camera.bat  run-rc-spidar.bat  run-rc.bat
drone_api/rc/: api_control_sample.py  rc-custom.py  rc-spidar.py
drone_api/rc/rc_config/: Spidar-control.json
src/: CMakeLists.txt
src/my_main/service/: CMakeLists.txt  my_main_drone_service.cpp
